--- a/index.html
+++ b/index.html
@@ -10,73 +10,111 @@
 
 </head>
 <body>
-
-  A history of everything you copy
-
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
-
-  Download for iOS
-  Download for Mac
-
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
+  <div class="container">
+    <header class="header">
+      <div class="logo">
+        <img src="./images/logo.svg" alt="Logo">
+      </div>
+      <div class="history">
+        <h2 class="history__h2">
+          A history of everything you copy
+        </h2>
+        <p class="history__p">Clipboard allows you to track and organize everything you 
+          copy. Instantly access your clipboard on all your devices.</p>
+        <div class="download">
+          <button class="download__ios">Download for iOS</button>
+          <button class="download__mac">Download for Mac</button>
+        </div>
+      </div>
+    </header>
+    <div class="snippets">
+      <h2 class="snippets__h2">Keep track of your snippets</h2>
+      <p class="snippets__p">Clipboard instantly stores any item you copy in the cloud, 
+        meaning you can access your snippets immediately on all your 
+        devices. Our Mac and iOS apps will help you organize everything.</p>
+        <div class="compu__flex">
+      <img src="./images/image-computer.png" alt="image-computer" class="snippets__img">
+      <div class="snippets__info">
+        <div class="info__search">
+          <h2 class="search__h2">Quick Search</h2>
+          <p class="search__p">Easily search your snippets by content, category, web address, application, and more.</p>
+        </div>
+        <div class="info__sync">
+          <h2 class="sync__h2">iCloud Sync</h2>
+          <p class="sync__p">Instantly saves and syncs snippets across all your devices.</p>
+        </div>
+        <div class="info__complete">
+          <h2 class="complete__h2">Complete History</h2>
+          <p class="complete__p">Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="clipboard">
+      <h2 class="clipboard__h2">Access Clipboard Anywhere</h2>
+      <p class="clipboard__p">Whether you’re on the go, or at your computer, you can access all your Clipboard 
+        snippets in a few simple clicks.</p>
+      <img src="./images/image-devices.png" alt="" class="clipboard__img">
+    </div>
+    <div class="workflow">
+      <h2 class="workflow__h2">Supercharge your workflow</h2>
+      <p class="workflow__p">We’ve got the tools to boost your productivity.</p>
+      <div class="workflow__info">
+        <div class="info__blacklists">
+          <img src="./images/icon-blacklist.svg" alt="blacklists" class="blacklists__img">
+          <h2 class="blacklists__h2">Create blacklists</h2>
+          <p class="blacklists__p">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="info__text">
+          <img src="./images/icon-text.svg" alt="text" class="text__img">
+          <h2 class="text__h2">Plain text snippets</h2>
+          <p class="text__p">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="info__preview">
+          <img src="./images/icon-preview.svg" alt="text" class="preview__img">
+          <h2 class="preview__h2">Sneak preview</h2>
+          <p class="preview__p">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+    </div>
+    <div class="logos">
+      <img src="./images/logo-google.png" alt="" class="logos__empresa">
+      <img src="./images/logo-ibm.png" alt="" class="logos__empresa">
+      <img src="./images/logo-microsoft.png" alt="" class="logos__empresa">
+      <img src="./images/logo-hp.png" alt="" class="logos__empresa">
+      <img src="./images/logo-vector-graphics.png" alt="" class="logos__empresa">
+    </div>
+    <div class="ios__mac">
+      <h2 class="ios__mac__h2">Clipboard for iOS and Mac OS</h2>
+      <p class="ios__mac__p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+        and you’re ready to start adding to your clipboard.</p>
+        <div class="download">
+          <button class="download__ios">Download for iOS</button>
+          <button class="download__mac">Download for Mac</button>
+        </div>
+    </div>
+    <footer class="footer">
+      <img src="./images/logo.svg" alt="" class="footer__logo">
+      <div class="footer__options">
+        <a href="#" class="options__a">FAQs</a>
+        <a href="#" class="options__a">Contact Us</a>
+        <a href="#" class="options__a">Privacy Policy</a>
+        <a href="#" class="options__a">Press Kit</a>
+        <a href="#" class="options__a">Install Guide</a>
+      </div>
+      <div class="social">
+        <img src="./images/icon-facebook.svg" alt="facebook" class="social__face">
+        <img src="./images/icon-twitter.svg" alt="twitter" class="social__twitter">
+        <img src="./images/icon-instagram.svg" alt="instagram" class="social__insta">
+      </div>
+    </footer>
+  </div>
   
-  <footer>
+  <div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Gastón Recalde</a>.
     </p>
-  </footer>
+  </div>
 </body>
 </html>
